# tvt-nvr-homeassistant

./: .gitignore  README.md  __init__.py  alarm_control_panel.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  pyproject.toml  raw_server.py  services.yaml  setup.cfg  switch.py
translations/: en.json  fr.json  strings.json
typings/: homeassistant_stubs.py
